--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,15 @@
   "author": "dan salahi",
   "license": "MIT",
   "dependencies": {
+    "auto-bind": "^4.0.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
     "jest": "^26.6.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1"
   }
 }
